Fix errors in test cases for ref resolver driver: Felix, navigator: Chris